[metadata]
name = zdoom-textures-writer
version = 1.0
author = GianptDev
author_email = gianptdev@gmail.com
description = Small tool to write a valid textures text file for the zdoom engine, inteded to be used for automated scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GianptDev/Zdoom-TexturesWriter
project_urls =
    Bug Tracker = https://github.com/GianptDev/Zdoom-TexturesWriter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 7 - Inactive

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src